@@ -2,7 +2,7 @@
     "gui": [
         {
             "label": "Minimal Sample",
-            "command": ["echo Hello!"],
+            "command": "echo Hello!",
             "button": "Echo!",
             "components": []
         }
