@@ -1,6 +1,8 @@
 ver0.0.4
 - Added UTF-8 support for Windows
 - Added format check for gui_definition.json
+- Added auto-quotes to path components
+- Changed command format
 
 ver0.0.3
 - Added checkboxes to GUI components
